--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,25 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 html {
   font-size: 62.5%;
+}
+
+h4 {
+  font-size: 1.6rem;
+  color: rgb(56, 56, 56);
+}
+
+h3 {
+  font-size: 2.4rem;
+  color: rgb(56, 56, 56);
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+
+a {
+  color: rgb(56, 56, 56);
 }
